# DesignSystem

./: CMakeLists.txt  sources.cmake
src/: main.cpp
src/engine/buildings/: build.h  connectors.cpp  connectors.h  factory.cpp  factory.h  party.cpp  party.h  party_observer.h
src/engine/common/: common.h
src/engine/core/: engine.h  simple_engine.cpp  simple_engine.h
src/engine/functors/: move_functors.cpp  move_functors.h
src/engine/map/: map.cpp  map.h
src/engine/tools/: calc_fps.cpp  calc_fps.h  tool.h
src/engine/vehicles/: action_object.h  vehicle.h  vehicle_unit.cpp  vehicle_unit.h
src/event_machine/: event_machine.cpp  event_machine.h  event_receiver.h  events_list.h  mediator.cpp  mediator.h
src/graphics/: mediator.cpp  mediator.h  observers.h
src/graphics/gl_functions/: gl_initialization.cpp  gl_initialization.h  keys_actions.cpp  keys_actions.h  shader_functions.h  shader_reader.h  textures.cpp  textures.h
src/graphics/tools/: draw_fps.cpp  draw_fps.h
src/shaders/: simple.fs.glsl  simple.vs.glsl  texture.vs.glsl
